--- a/src/index.html
+++ b/src/index.html
@@ -71,32 +71,21 @@ Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the
     </div>
   </section>
 
-  <!-- About Section -->
-<section class="mt-16 bg-[#1E6CB0]">
-  <div class="container mx-auto px-6 py-8 grid grid-cols-1 md:grid-cols-2 gap-12">
-    <div class="flex flex-col justify-center">
-      <h2 class="text-white">Welcome to Schaefer Auto</h2>
-      <p class="mt-4 text-white">
-        Located in Lomira, Wisconsin, Schaefer Auto is your go-to destination for quality used vehicles at unbeatable prices. Our mission is to provide dependable cars that fit your budget, and we take pride in offering a wide selection of makes, models, years, and mileage options. If the vehicle you’re looking for isn’t on our lot, don’t worry—our team is dedicated to finding exactly what you need.
-      </p>
-      <div class="mt-6">
-        <a
-          href="/about"
-          class="px-8 py-3  border-white bg-white text-[#1E6CB0] rounded-lg hover:bg-gray-200 inline-block font-bold"
-        >
-          About Us
-        </a>
-      </div>
+
+  <section class="mt-12 bg-[#1E6CB0] flex justify-center items-center py-12 px-4">
+    <div class="flex flex-col items-center space-y-4">
+      <h2 class="text-white">Looking for a Loan?</h2>
+      <p class="mt-6 text-white text-center">Click the button below to get started and discover the financing options available to you.</p>
+      <a
+        href="https://marinecreditunion.my.site.com/?core=es5"
+        class="px-6 py-3 text-[#1E6CB0] bg-white rounded-lg hover:bg-gray-200 inline-block font-bold"
+        target="_blank"
+      >
+        Apply For Financing
+      </a>
     </div>
-    <div class="flex justify-end items-center">
-      <img
-        src="./static/img/about/schaefer-auto4.jpeg"
-        alt="Welcome to Schaefer Auto"
-        class="w-128 h-96 object-cover rounded-lg shadow-lg"
-      />
-    </div>
-  </div>
-</section>
+  </section>
+  
   
 
 <!-- Testimonials Section -->
@@ -130,8 +119,35 @@ Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the
   </div>
 </section>
 
+  <!-- About Section -->
+  <section class="mt-12 bg-gray-100">
+    <div class="container mx-auto px-6 py-8 grid grid-cols-1 md:grid-cols-2 gap-12">
+      <div class="flex flex-col justify-center">
+        <h2>Welcome to Schaefer Auto</h2>
+        <p class="mt-4">
+          Located in Lomira, Wisconsin, Schaefer Auto is your go-to destination for quality used vehicles at unbeatable prices. Our mission is to provide dependable cars that fit your budget, and we take pride in offering a wide selection of makes, models, years, and mileage options. If the vehicle you’re looking for isn’t on our lot, don’t worry—our team is dedicated to finding exactly what you need.
+        </p>
+        <div class="mt-6">
+          <a
+            href="/about"
+            class="px-8 py-3  border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] inline-block font-bold"
+          >
+            About Us
+          </a>
+        </div>
+      </div>
+      <div class="flex justify-end items-center">
+        <img
+          src="./static/img/about/schaefer-auto4.jpeg"
+          alt="Welcome to Schaefer Auto"
+          class="w-128 h-96 object-cover rounded-lg shadow-lg"
+        />
+      </div>
+    </div>
+  </section>
+
 <!-- Contact Section -->
-<section class="mt-12 bg-gray-100">
+<section class="mt-12">
   <div class="container mx-auto px-6 py-12 grid grid-cols-1 md:grid-cols-2 gap-12">
     <!-- Left Side: Contact Info -->
     <div class="flex flex-col">
