--- a/src/financing/index.html
+++ b/src/financing/index.html
@@ -18,11 +18,12 @@ layout: default
       <div class="flex flex-col justify-start">
         <h2 class="mb-4">Get Financing Approved Today!</h2>
         <p class="text-gray-600 mb-4">
-          At Schaefer Auto, we understand that financing a new vehicle can seem overwhelming. That’s why we’ve partnered with Marine Credit Union to make the process as easy and stress-free as possible. Whether you’re purchasing a car, truck, or SUV, we offer financing options tailored to fit your budget and needs.
+          
+At Schaefer Auto, we know that financing a new vehicle can feel overwhelming. That's why we recommend visiting Marine Credit Union to make the process as smooth and stress-free as possible. Whether you're buying a car, truck, or SUV, they offer financing options designed to fit your budget and needs. With competitive rates and flexible terms, Marine Credit Union makes it easy to drive away in your next vehicle.
         </p>
 
         <p class="text-gray-600 mb-2">
-          Ready to take the next step? Click the link below to start your financing application and get approved in no time.
+          Ready to take the next step? Click the button below to get started.
         </p>
         <div class="mt-4">
         <a href="https://marinecreditunion.my.site.com/?core=es5" class="px-8 py-3 border-white bg-[#1E6CB0] text-white rounded-lg inline-block hover:bg-[#155789] font-bold" target="_blank">Apply for Financing</a>
