--- a/src/index.html
+++ b/src/index.html
@@ -147,8 +147,8 @@ Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the
   </section>
 
 <!-- Contact Section -->
-<section class="mt-12">
-  <div class="container mx-auto px-6 py-12 grid grid-cols-1 md:grid-cols-2 gap-12">
+<section class="mt-16">
+  <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12">
     <!-- Left Side: Contact Info -->
     <div class="flex flex-col">
       <h2 class="mb-4">Contact Us Today</h2>
