--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@ Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the
   </section>
 
 <!-- Contact Section -->
-<section class="mt-16">
+<section class="mt-16 mb-12">
   <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12">
     <!-- Left Side: Contact Info -->
     <div class="flex flex-col">
